hphp/hack/test/typecheck/higher_kinded_types/tparam_method_vs_class2.php.rust_elab.exp
File "tparam_method_vs_class2.php", line 10, characters 3-40:
Redeclared method `Test::test1` (Parsing[1002])
File "tparam_method_vs_class2.php", line 10, characters 19-23:
Method name already bound: `test1` (Naming[2033])
File "tparam_method_vs_class2.php", line 10, characters 19-23:
Argument already bound: `test1` (Naming[2036])
File "tparam_method_vs_class2.php", line 7, characters 25-26:
The name `TB` was already used for another generic parameter. Please use a different name to avoid confusion. (Typing[4378])
File "tparam_method_vs_class2.php", line 10, characters 28-29:
The name `TB` was already used for another generic parameter. Please use a different name to avoid confusion. (Typing[4378])
